--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
                     id="dropdown1" data-bs-toggle="dropdown" aria-expanded="false">Comprobantes</a>
                     <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdown1">
-                        <li><a class="dropdown-item" href="#">Nuevo comporbante</a></li>
+                        <li><a class="dropdown-item" href="nuevo-comprobante.html">Nuevo comprobante</a></li>
                         <li><a class="dropdown-item" href="#">Resumen de comprobantes</a></li>
                     </ul>
                 </li>
