--- a/nuevo-comprobante.html
+++ b/nuevo-comprobante.html
@@ -53,11 +53,32 @@
         </div>
         <main class="mt-3 w-100">
             <div class="content">
-                <h2>Ingreso de productos</h2>
+                <h2>Ingreso de comprobantes</h2>
                 <form class="form mt-5 me-3" method="post">
+                  <div class="row mb-3">
+                    <div class="col">
+                      <input type="text" class="form-control" placeholder="Razón Social">
+                    </div>
+                    <div class="col">
+                      <input type="text" class="form-control" placeholder="RUT">
+                    </div>
+                    <div class="col">
+                      <input type="search" class="form-control" placeholder="RUT">
+                    </div>
+                </div>
                     <div class="row mb-3">
+                        <div class="col-auto">
+                          <input type="date" class="form-control" placeholder="fecha">
+                        </div>
+                        <div class="col-auto">
+                          <input type="number" class="form-control" placeholder="N° factura">
+                        </div>
                         <div class="col">
-                          <input type="text" class="form-control" placeholder="Nombre del producto">
+                          <select class="form-select" aria-label="Default select example">
+                            <option selected>Tipo de comprobante</option>
+                            <option value="1">Compra contado</option>
+                            <option value="2">Compra crédito</option>
+                          </select>
                         </div>
                     </div>
                     <div class="row mb-3">
