--- a/nuevo-comprobante.html
+++ b/nuevo-comprobante.html
@@ -2,134 +2,140 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contablito</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contablito</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <section class="d-flex">
-        <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark vh-100 me-3" style="width: 280px;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                <span class="fs-4">Contablito</span>
-            </a>
-            <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
-                <li class="dropdown nav-link">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                    id="dropdown1" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-                    <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdown1">
-                        <li><a class="dropdown-item" href="nuevo-producto.html">Nuevo producto</a></li>
-                        <li><a class="dropdown-item" href="#">Editar producto</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown nav-link">
-                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                    id="dropdown1" data-bs-toggle="dropdown" aria-expanded="false">Comprobantes</a>
-                    <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdown1">
-                        <li><a class="dropdown-item" href="nuevo-comprobante.html">Nuevo comprobante</a></li>
-                        <li><a class="dropdown-item" href="#">Resumen de comprobantes</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" class="nav-link text-white">
-                        Movimientos de stock
-                    </a>
-                </li>
-            </ul>
-            <hr>
-            <div class="dropdown">
-                <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-                    id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                    <strong>Mi usuario</strong>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1" style="">
-                    <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
-                </ul>
+  <section class="d-flex">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark vh-100 me-3" style="width: 280px;">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+        <span class="fs-4">Contablito</span>
+      </a>
+      <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="dropdown nav-link">
+          <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdown1"
+            data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+          <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdown1">
+            <li><a class="dropdown-item" href="nuevo-producto.html">Nuevo producto</a></li>
+            <li><a class="dropdown-item" href="#">Editar producto</a></li>
+          </ul>
+        </li>
+        <li class="dropdown nav-link">
+          <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdown1"
+            data-bs-toggle="dropdown" aria-expanded="false">Comprobantes</a>
+          <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdown1">
+            <li><a class="dropdown-item" href="nuevo-comprobante.html">Nuevo comprobante</a></li>
+            <li><a class="dropdown-item" href="#">Resumen de comprobantes</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#" class="nav-link text-white">
+            Movimientos de stock
+          </a>
+        </li>
+      </ul>
+      <hr>
+      <div class="dropdown">
+        <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <strong>Mi usuario</strong>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1" style="">
+          <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+        </ul>
+      </div>
+    </div>
+    <main class="mt-3 w-100">
+      <div class="content">
+        <h2>Ingreso de comprobantes</h2>
+        <form class="form mt-5 me-3" method="post">
+          <div class="row mb-3">
+            <div class="col">
+              <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Razón social">
+              <datalist id="datalistOptions">
+                <option value="Cliente 1"></option>
+                <option value="Otro cliente"></option>
+              </datalist>
             </div>
-        </div>
-        <main class="mt-3 w-100">
-            <div class="content">
-                <h2>Ingreso de comprobantes</h2>
-                <form class="form mt-5 me-3" method="post">
-                  <div class="row mb-3">
-                    <div class="col">
-                      <input type="text" class="form-control" placeholder="Razón Social">
-                    </div>
-                    <div class="col">
-                      <input type="text" class="form-control" placeholder="RUT">
-                    </div>
-                    <div class="col">
-                      <input type="search" class="form-control" placeholder="RUT">
-                    </div>
-                </div>
-                    <div class="row mb-3">
-                        <div class="col-auto">
-                          <input type="date" class="form-control" placeholder="fecha">
-                        </div>
-                        <div class="col-auto">
-                          <input type="number" class="form-control" placeholder="N° factura">
-                        </div>
-                        <div class="col">
-                          <select class="form-select" aria-label="Default select example">
-                            <option selected>Tipo de comprobante</option>
-                            <option value="1">Compra contado</option>
-                            <option value="2">Compra crédito</option>
-                          </select>
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col">
-                          <textarea class="form-control" placeholder="Descripción del producto" id="description" style="height: 200px"></textarea>
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col-auto">
-                          <input type="number" class="form-control" placeholder="Cantidad">
-                        </div>
-                        <div class="col-auto">
-                          <input type="number" class="form-control" placeholder="Stock mínimo">
-                        </div>
-                        <div class="col-auto">
-                            <input type="number" class="form-control" placeholder="Precio">
-                          </div>
-                    </div>
-                    <fieldset class="row mb-3">
-                        <legend class="col-form-label pt-0">Tipo de IVA</legend>
-                        <div class="col-sm-10">
-                          <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
-                            <label class="form-check-label" for="gridRadios1">
-                              Exento - 0%
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                            <label class="form-check-label" for="gridRadios2">
-                              IVA Mínimo - 10%
-                            </label>
-                          </div>
-                          <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" checked>
-                            <label class="form-check-label" for="gridRadios3">
-                              IVA Básico - 22%
-                            </label>
-                          </div>
-                        </div>
-                      </fieldset>
-                    <button type="submit" class="btn btn-primary mt-3">Guardar</button>
-                  </form>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="RUT">
             </div>
-        </main>
-    </section>
+            <div class="col">
+              <button type="submit" class="btn btn-primary">Agregar</button>
+            </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+          </div>
+          <div class="row mb-3">
+            <div class="col-auto">
+              <input type="date" class="form-control" placeholder="fecha">
+            </div>
+            <div class="col-auto">
+              <input type="number" class="form-control" placeholder="N° factura">
+            </div>
+            <div class="col">
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Tipo de comprobante</option>
+                <option value="1">Compra contado</option>
+                <option value="2">Compra crédito</option>
+              </select>
+            </div>
+          </div>
+          <div class="row mb-3">
+            <div class="col">
+              <textarea class="form-control" placeholder="Descripción del producto" id="description"
+                style="height: 200px"></textarea>
+            </div>
+          </div>
+          <div class="row mb-3">
+            <div class="col-auto">
+              <input type="number" class="form-control" placeholder="Cantidad">
+            </div>
+            <div class="col-auto">
+              <input type="number" class="form-control" placeholder="Stock mínimo">
+            </div>
+            <div class="col-auto">
+              <input type="number" class="form-control" placeholder="Precio">
+            </div>
+          </div>
+          <fieldset class="row mb-3">
+            <legend class="col-form-label pt-0">Tipo de IVA</legend>
+            <div class="col-sm-10">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
+                <label class="form-check-label" for="gridRadios1">
+                  Exento - 0%
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                <label class="form-check-label" for="gridRadios2">
+                  IVA Mínimo - 10%
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" checked>
+                <label class="form-check-label" for="gridRadios3">
+                  IVA Básico - 22%
+                </label>
+              </div>
+            </div>
+          </fieldset>
+          <button type="submit" class="btn btn-primary mt-3">Guardar</button>
+        </form>
+      </div>
+    </main>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-    
+
 </body>
 
 </html>
