--- a/nuevo-producto.html
+++ b/nuevo-producto.html
@@ -54,53 +54,59 @@
         <main class="mt-3 w-100">
             <div class="content">
                 <h2>Ingreso de productos</h2>
-                <form class="form mt-5 me-3" method="post">
-                    <div class="row mb-3">
-                        <div class="col">
-                          <input type="text" class="form-control" placeholder="Nombre del producto">
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col">
-                          <textarea class="form-control" placeholder="Descripción del producto" id="description" style="height: 200px"></textarea>
-                        </div>
-                    </div>
-                    <div class="row mb-3">
-                        <div class="col-auto">
-                          <input type="number" class="form-control" placeholder="Cantidad">
-                        </div>
-                        <div class="col-auto">
-                          <input type="number" class="form-control" placeholder="Stock mínimo">
-                        </div>
-                        <div class="col-auto">
-                            <input type="number" class="form-control" placeholder="Precio">
-                          </div>
-                    </div>
-                    <fieldset class="row mb-3">
-                        <legend class="col-form-label pt-0">Tipo de IVA</legend>
-                        <div class="col-sm-10">
+                <form class="form mt-5 me-3" method="post" onsubmit="addProduct(event)">
+                  <div class="mb-3">
+                      <div class="col">
+                          <label for="">ID:</label>
+                          <input type="text" class="form-control border-0 bg-transparent" id="productId" readonly placeholder="Identificador">
+                      </div>
+                  </div>
+                  <div class="row mb-3">
+                      <div class="col">
+                          <input type="text" class="form-control" id="productName" placeholder="Nombre del producto">
+                      </div>
+                  </div>
+                  <div class="row mb-3">
+                      <div class="col">
+                          <textarea class="form-control" id="description" placeholder="Descripción del producto" style="height: 200px"></textarea>
+                      </div>
+                  </div>
+                  <div class="row mb-3">
+                      <div class="col-auto">
+                          <input type="number" class="form-control" id="quantity" placeholder="Cantidad">
+                      </div>
+                      <div class="col-auto">
+                          <input type="number" class="form-control" id="minStock" placeholder="Stock mínimo">
+                      </div>
+                      <div class="col-auto">
+                          <input type="number" class="form-control" id="price" placeholder="Precio">
+                      </div>
+                  </div>
+                  <fieldset class="row mb-3">
+                      <legend class="col-form-label pt-0">Tipo de IVA</legend>
+                      <div class="col-sm-10">
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
-                            <label class="form-check-label" for="gridRadios1">
-                              Exento - 0%
-                            </label>
+                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="0">
+                              <label class="form-check-label" for="gridRadios1">
+                                  Exento - 0%
+                              </label>
                           </div>
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                            <label class="form-check-label" for="gridRadios2">
-                              IVA Mínimo - 10%
-                            </label>
+                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="10">
+                              <label class="form-check-label" for="gridRadios2">
+                                  IVA Mínimo - 10%
+                              </label>
                           </div>
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" checked>
-                            <label class="form-check-label" for="gridRadios3">
-                              IVA Básico - 22%
-                            </label>
+                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="22" checked>
+                              <label class="form-check-label" for="gridRadios3">
+                                  IVA Básico - 22%
+                              </label>
                           </div>
-                        </div>
-                      </fieldset>
-                    <button type="submit" class="btn btn-primary mt-3">Guardar</button>
-                  </form>
+                      </div>
+                  </fieldset>
+                  <button type="submit" class="btn btn-primary mt-3" id="saveButton">Guardar</button>
+              </form>              
             </div>
         </main>
     </section>
@@ -108,7 +114,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-    
+<script src="product.js"></script>
 </body>
 
 </html>
